test_suite/tests/ui/malformed/trailing_expr.stderr
error: expected `=`
 --> tests/ui/malformed/trailing_expr.rs:5:32
  |
3 | #[derive(Serialize)]
  |          --------- in this derive macro expansion
4 | struct S {
5 |     #[serde(skip_serializing_if, x.is_empty())]
  |                                ^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
